--- a/ConsoleFramework/ConsoleFramework.csproj
+++ b/ConsoleFramework/ConsoleFramework.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{2A59C284-2995-4F37-8D65-411C25C85493}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ConsoleFramework</RootNamespace>
     <AssemblyName>ConsoleFramework</AssemblyName>
@@ -33,6 +33,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -78,7 +81,6 @@
     <Compile Include="Rendering\Renderer.cs" />
     <Compile Include="ConsoleApplication.cs" />
     <Compile Include="Native\Win32.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Events\RoutedEvent.cs" />
     <Compile Include="Xaml\BindingMarkupExtension.cs" />
@@ -96,12 +98,7 @@
   <ItemGroup>
     <Content Include="Controls\LayoutSystem.txt" />
     <Content Include="Events\Focus.txt" />
-    <EmbeddedResource Include="Layout.xml" />
-    <EmbeddedResource Include="GridTest.xml" />
     <Content Include="Xaml\xaml.txt" />
-    <EmbeddedResource Include="MainWindow.xml">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
     <Content Include="readme.txt" />
   </ItemGroup>
   <ItemGroup>
