* Xaml-related stuff moved to separate assembly.
--HG--
rename : ConsoleFramework/Xaml/ContentPropertyAttribute.cs => Xaml/ContentPropertyAttribute.cs
rename : ConsoleFramework/Xaml/Factories.cs => Xaml/Factories.cs
rename : ConsoleFramework/Xaml/ITypeConverter.cs => Xaml/ITypeConverter.cs
rename : ConsoleFramework/Xaml/MarkupExtensionAttribute.cs => Xaml/MarkupExtensionAttribute.cs
rename : ConsoleFramework/Xaml/MarkupExtensionsParser.cs => Xaml/MarkupExtensionsParser.cs
rename : ConsoleFramework/Xaml/RefMarkupExtension.cs => Xaml/RefMarkupExtension.cs
rename : ConsoleFramework/Xaml/TypeConverterAttribute.cs => Xaml/TypeConverterAttribute.cs
rename : ConsoleFramework/Xaml/TypeMarkupExtension.cs => Xaml/TypeMarkupExtension.cs
rename : ConsoleFramework/Xaml/XamlParser.cs => Xaml/XamlParser.cs
rename : ConsoleFramework/Xaml/xaml.txt => Xaml/xaml.txt
rename : ConsoleFramework/Xaml/xaml.xsd => Xaml/xaml.xsd

--- a/ConsoleFramework/ConsoleFramework.csproj
+++ b/ConsoleFramework/ConsoleFramework.csproj
@@ -88,21 +88,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Events\RoutedEvent.cs" />
     <Compile Include="Xaml\BindingMarkupExtension.cs" />
-    <Compile Include="Xaml\ContentPropertyAttribute.cs" />
     <Compile Include="Xaml\ConvertMarkupExtension.cs" />
-    <Compile Include="Xaml\ITypeConverter.cs" />
-    <Compile Include="Xaml\MarkupExtensionAttribute.cs" />
-    <Compile Include="Xaml\MarkupExtensionsParser.cs" />
-    <Compile Include="Xaml\Factories.cs" />
-    <Compile Include="Xaml\RefMarkupExtension.cs" />
-    <Compile Include="Xaml\TypeConverterAttribute.cs" />
-    <Compile Include="Xaml\TypeMarkupExtension.cs" />
-    <Compile Include="Xaml\XamlParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Controls\LayoutSystem.txt" />
     <Content Include="Events\Focus.txt" />
-    <Content Include="Xaml\xaml.txt" />
     <Content Include="readme.txt" />
   </ItemGroup>
   <ItemGroup>
@@ -110,11 +100,10 @@
       <Project>{E1CD529B-E3F1-4660-AA4F-1670E0992553}</Project>
       <Name>Binding</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Xaml\xaml.xsd">
-      <SubType>Designer</SubType>
-    </None>
+    <ProjectReference Include="..\Xaml\Xaml.csproj">
+      <Project>{C6EDD03A-30BE-4EFE-8EE4-C1CD3212778B}</Project>
+      <Name>Xaml</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
