+ Added unit test for Type markup extension.

--- a/TestProject1/TestProject1.csproj
+++ b/TestProject1/TestProject1.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Xaml\MarkupExtensionsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HitTestingTest.cs" />
+    <Compile Include="Xaml\TypeExtensionTest\Test.cs" />
     <Compile Include="Xaml\XamlTest.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -79,6 +80,9 @@
     <EmbeddedResource Include="Xaml\EnumsTest\ObjectToCreate.xml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Xaml\TypeExtensionTest\object.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
