* Menu UI behaviour improved.

--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -84,7 +84,9 @@
     <EmbeddedResource Include="MainMenu\main.xml" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="MainMenu\windows-host.xml" />
+    <EmbeddedResource Include="MainMenu\windows-host.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
