+ Added menu refers to same command to commanding example.

--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -92,6 +92,11 @@
   <ItemGroup>
     <EmbeddedResource Include="Commands\main.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Commands\windows-host.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
