--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -90,7 +90,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Commands\main.xml" />
+    <EmbeddedResource Include="Commands\main.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Commands\windows-host.xml">
