--- a/Binding/BindingMono.csproj
+++ b/Binding/BindingMono.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{2BBC9906-5CEB-40DD-84E0-6D037EF159CA}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{E1CD529B-E3F1-4660-AA4F-1670E0992553}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Examples</RootNamespace>
-    <AssemblyName>Examples</AssemblyName>
+    <RootNamespace>Binding</RootNamespace>
+    <AssemblyName>Binding</AssemblyName>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -21,7 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -32,39 +31,30 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject>Examples.MainMenu.Program</StartupObject>
-  </PropertyGroup>
+  <ItemGroup>
+    <Compile Include="Adapters\IBindingAdapter.cs" />
+    <Compile Include="BindingBase.cs" />
+    <Compile Include="BindingMode.cs" />
+    <Compile Include="BindingResult.cs" />
+    <Compile Include="BindingSettingsBase.cs" />
+    <Compile Include="Converters\ConversionResult.cs" />
+    <Compile Include="Converters\IBindingConverter.cs" />
+    <Compile Include="Converters\StringToIntegerConverter.cs" />
+    <Compile Include="Observables\IObservableList.cs" />
+    <Compile Include="Observables\ObservableList.cs" />
+    <Compile Include="Observables\ObservableListOfT.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Converters\ReversedConverter.cs" />
+    <Compile Include="Validators\IBindingValidator.cs" />
+    <Compile Include="Validators\RequiredValidator.cs" />
+    <Compile Include="Validators\ValidationResult.cs" />
+  </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AsyncUiUpdate\Program.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CheckBoxes\Program.cs" />
-    <Compile Include="MainMenu\Program.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="CheckBoxes\main.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="GridTest.xml" />
-    <EmbeddedResource Include="MainMenu\main.xml" />
-    <EmbeddedResource Include="MainMenu\windows-host.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="MainWindow.xml">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Layout.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="AsyncUiUpdate\main.xml" />
+    <Content Include="readme.txt" />
+    <Content Include="roadmap.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -74,18 +64,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <ItemGroup>
-    <ProjectReference Include="..\ConsoleFramework\ConsoleFrameworkMono.csproj">
-      <Project>{03300A54-DEC4-41A8-9C9A-591805400C76}</Project>
-      <Name>ConsoleFrameworkMono</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Xaml\XamlMono.csproj">
-      <Project>{C6EDD03A-30BE-4EFE-8EE4-C1CD3212778B}</Project>
-      <Name>XamlMono</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="CheckBoxes\" />
-    <Folder Include="MainMenu\" />
-  </ItemGroup>
 </Project>
