--- a/Web/TestApp/TestApp/TestApp.csproj
+++ b/Web/TestApp/TestApp/TestApp.csproj
@@ -14,6 +14,21 @@
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -35,7 +50,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>TestApp.Program</StartupObject>
+    <StartupObject>TestApp.Tests.ListFailProgram</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="JSIL">
@@ -53,10 +68,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assert.cs" />
     <Compile Include="ConsoleAdapter.cs" />
     <Compile Include="EventManager2.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Program22.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\Binding\AdapterTest.cs" />
+    <Compile Include="Tests\Binding\CollectionRebindTest.cs" />
+    <Compile Include="Tests\Binding\CollectionsTest.cs" />
+    <Compile Include="Tests\Binding\ExplicitConverterTest.cs" />
+    <Compile Include="Tests\Binding\SimplePropertiesTest.cs" />
+    <Compile Include="Tests\Binding\ValidationTest.cs" />
+    <Compile Include="Tests\ListFailProgram.cs" />
+    <Compile Include="Tests\Program.cs" />
+    <Compile Include="Tests\Xaml\EnumsTest\EnumsTest.cs" />
+    <Compile Include="Tests\Xaml\XamlTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="1.html">
@@ -65,6 +92,10 @@
     <Content Include="ConsoleAdapter.js">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="Tests\Xaml\XamlObject1.xml" />
+    <EmbeddedResource Include="Tests\Xaml\EnumsTest\ObjectToCreate.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="go.bat">
@@ -87,6 +118,28 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.0">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Windows.Installer.3.1">
+      <Visible>False</Visible>
+      <ProductName>Windows Installer 3.1</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
