--- a/Web/TestApp/TestApp/TestApp.csproj
+++ b/Web/TestApp/TestApp/TestApp.csproj
@@ -50,14 +50,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>TestApp.Program</StartupObject>
+    <StartupObject>TestApp.Tests.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="JSIL">
-      <HintPath>..\..\JSIL\JSIL\bin\JSIL.dll</HintPath>
+      <HintPath>..\..\..\..\JSIL-master\JSIL\bin\JSIL.dll</HintPath>
     </Reference>
     <Reference Include="JSIL.Meta">
-      <HintPath>..\..\JSIL\JSIL\bin\JSIL.Meta.dll</HintPath>
+      <HintPath>..\..\..\..\JSIL-master\JSIL\bin\JSIL.Meta.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
