+ Added RadioGroup control and sample for it.

--- a/ConsoleFramework/ConsoleFramework.csproj
+++ b/ConsoleFramework/ConsoleFramework.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Controls\Menu.cs" />
     <Compile Include="Controls\MessageBox.cs" />
     <Compile Include="Controls\ProgressBar.cs" />
+    <Compile Include="Controls\RadioButton.cs" />
     <Compile Include="Controls\ScrollViewer.cs" />
     <Compile Include="Controls\TextBox.cs" />
     <Compile Include="Controls\TreeView.cs" />
