--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -35,7 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Examples.TreeView.Program</StartupObject>
+    <StartupObject>Examples.RadioButtons.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -48,6 +48,7 @@
     <Compile Include="MainMenu\Program.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RadioButtons\Program.cs" />
     <Compile Include="TreeView\Program.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -103,6 +104,9 @@
   <ItemGroup>
     <EmbeddedResource Include="TreeView\main.xml" />
     <EmbeddedResource Include="TreeView\windows-host.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="RadioButtons\main.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
