Introduce config file to map dll names for Mac and avoid renaming.

--- a/ConsoleFramework/ConsoleFrameworkMono.csproj
+++ b/ConsoleFramework/ConsoleFrameworkMono.csproj
@@ -115,4 +115,9 @@
       <Name>XamlMono</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="ConsoleFramework.dll.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
