--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -35,7 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Examples.Program</StartupObject>
+    <StartupObject>Examples.TabControl.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'DebugMono|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -68,6 +68,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RadioButtons\Program.cs" />
+    <Compile Include="TabControl\Program.cs" />
     <Compile Include="TreeView\Program.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -130,6 +131,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="RadioButtons\main.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="TabControl\main.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
