--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ build/
 ConsoleFramework.suo
 .idea/
 ConsoleFramework.userprefs
+.idea.ConsoleFramework/riderModule.iml
+.vs/ConsoleFramework/v15/.suo
+ConsoleFramework.v12.suo
