--- a/ConsoleFramework/ConsoleFramework.csproj
+++ b/ConsoleFramework/ConsoleFramework.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Controls\ListBox.cs" />
     <Compile Include="Controls\Menu.cs" />
     <Compile Include="Controls\MessageBox.cs" />
+    <Compile Include="Controls\PassWord.cs" />
     <Compile Include="Controls\ProgressBar.cs" />
     <Compile Include="Controls\RadioButton.cs" />
     <Compile Include="Controls\ScrollViewer.cs" />
