Add CheckedChar properties to all checkbox style controls
Signed-off-by: Matheus Silva <matheus@codealkemy.co>

--- a/ConsoleFramework/ConsoleFramework.csproj
+++ b/ConsoleFramework/ConsoleFramework.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Controls\RadioButton.cs" />
     <Compile Include="Controls\ScrollViewer.cs" />
     <Compile Include="Controls\TabControl.cs" />
+    <Compile Include="Controls\TextArea.cs" />
     <Compile Include="Controls\TextBox.cs" />
     <Compile Include="Controls\TreeView.cs" />
     <Compile Include="Controls\UIElementCollection.cs" />
